fix contrast issues

--- a/css/variables.css
+++ b/css/variables.css
@@ -5,8 +5,8 @@
  * colors have been used here to ensure a proper contrast. 
 */
 :root {
-  --action-button: #037FAD;
-  --primary: #0083b3;
+  --action-button: #037aa5;
+  --primary: #0079a5;
   --secondary: #fff;
   --bg-overlay: #d2d4d4;
 }
